﻿
2007-05-13  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/game-parameters.h, editor/gtk/editor.c,
	editor/gtk/Makefile.am, editor/gtk/game-parameters.c,
	common/map-query.c, common/gtk/common_gtk.h,
	common/gtk/game-settings.c, common/gtk/game-settings.h,
	common/gtk/Makefile.am, common/gtk/commmon_gtk.c, common/game.c,
	common/map.c, common/game.h, common/map.h, server/gtk/main.c,
	client/gtk/connect.c: Added victory point check. Game rules are split
	from game settings.
	* editor/gtk/game-settings.c -> common/gtk/game-rules.c,
	editor/gtk/game-settings.h -> common/gtk/game-rules.h: Renamed
	* pioneers.spec.in: Sorted the language list, added af and ja.

2007-05-13  Brian Wellington <bwelling@xbill.org>
	* editor/gtk/game-buildings.c, common/map_query.c,
	common/gtk/guimap.c, common/gtk/guimap.h, common/cost.c,
	common/game.c, common/cost.h, common/state.c, common/map.h,
	common/buildrec.h, server/turn.c, server/discard.c, server/server.h,
	server/pregame.c, server/buildutil.c, client/callback.h,
	client/gtk/interface.c, client/gtk/frontend.c, client/gtk/frontend.h,
	client/gtk/data/Makefile.am, client/gtk/data/city_wall.png,
	client/gtk/player.c, client/gtk/legend.c, client/gtk/settingscreen.c,
	client/gtk/gui.c, client/gtk/identity.c, client/common/client.c,
	client/common/client.h, client/common/stock.c,
	client/common/callback.c, client/common/player.c: Added support for
	city walls (using 'extension' in the protocol)

2005-05-13  Roland Clobus <rclobus@bigfoot.com>
	* server/player.c, server/server.h: Use 'extension' for broadcasts.
	
2007-05-08  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/editor.c, common/gtk/guimap.c, common/gtk/select-game.c,
	common/gtk/guimap.h, common/gtk/select-game.h, server/gtk/main.c,
	client/gtk/gui.c: Map preview in the server.
	
2007-04-29  Brian Wellington <bwelling@xbill.org>
	* common/gtk/polygon.c, common/gtk/polygon.h, common/gtk/guimap.c:
	Add the poly_draw_with_border() function to draw bordered polygons.
